# course_work

./: README.md  main.py  pyproject.toml
classes/: class_operation.py
functions/: funcs.py
tests/: test_code.py
