[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Pasha <pab.02@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
requests = "^2.31.0"
pytest = "^8.0.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
